misc UI detail improvements